--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,8 +21,8 @@ futures-intrusive = {version="0.5.0", optional=true}
 pollster = {version="0.3", optional=true }
 wgpu = {version="0.15", optional=true }
 
-#custos-macro = {path = "../custos-macro", optional=true}
-custos-macro = {version = "0.1.0", optional=true}
+custos-macro = {path = "../custos-macro", optional=true}
+#custos-macro = {version = "0.1.0", optional=true}
 
 # no-std float math
 libm = { version="0.2.6", optional = true }
@@ -33,9 +33,9 @@ min-cl = { version="0.1.2", optional=true }
 
 
 [features]
-#default = ["opencl"]
+default = ["stack", "macro", "cpu"]
 #default = ["stack", "cpu", "opencl"]
-default = ["stack", "cpu", "blas", "static-api", "opencl", "macro"]
+#default = ["stack", "cpu", "blas", "static-api", "opencl", "macro"]
 cpu = []
 opencl = ["dep:min-cl", "cpu"]
 #network = ["cuwanto-server"]
@@ -52,8 +52,8 @@ macro = ["dep:custos-macro"]
 
 [dev-dependencies]
 #criterion = "0.3"
-#custos-macro = {path = "../custos-macro"}
-custos-macro = {version = "0.1.0"}
+custos-macro = {path = "../custos-macro"}
+#custos-macro = {version = "0.1.0"}
 
 [[example]]
 name = "cuda_readme"
