--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ rust-version = "1.65"
 
 [dependencies]
 #cuwanto-server = {path="../cuwanto/cuwanto-server", optional=true}
-min-cl = { path="../min-cl", optional=true }
+min-cl = { version = "0.1.3", optional=true }
 
 # WGPU deps
 futures-intrusive = {version="0.5.0", optional=true}
@@ -27,7 +27,8 @@ custos-macro = {version = "0.1.0", optional=true}
 libm = { version="0.2.6", optional = true }
 
 [build-dependencies]
-min-cl = { path="../min-cl", optional=true }
+#min-cl = { path="../min-cl", optional=true }
+min-cl = { version = "0.1.3", optional=true }
 
 
 [features]
