--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,7 +35,7 @@ min-cl = { version = "0.1.3", optional=true }
 
 
 [features]
-default = ["stack", "macro", "cpu", "blas", "opencl", "autograd"]
+default = ["stack", "macro", "cpu", "blas", "opencl", "autograd", "cuda"]
 #default = ["stack", "cpu", "opencl"]
 #default = ["stack", "cpu", "blas", "static-api", "opencl", "macro"]
 cpu = []
