--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,8 @@ rust-version = "1.65"
 [dependencies]
 
 #cuwanto-server = {path="../cuwanto/cuwanto-server", optional=true}
-min-cl = { version = "0.1.3", optional=true }
+#min-cl = { version = "0.1.3", optional=true }
+min-cl = { path="../min-cl", optional=true }
 
 # WGPU deps
 futures-intrusive = {version="0.5.0", optional=true}
@@ -30,12 +31,12 @@ libm = { version="0.2.6", optional = true }
 
 
 [build-dependencies]
-#min-cl = { path="../min-cl", optional=true }
-min-cl = { version = "0.1.3", optional=true }
+min-cl = { path="../min-cl", optional=true }
+#min-cl = { version = "0.1.3", optional=true }
 
 
 [features]
-default = ["stack", "macro", "cpu", "blas", "opencl", "autograd", "cuda", "static-api"]
+default = ["stack", "macro", "cpu", "blas", "opencl", "autograd", "wgpu", "static-api"]
 #default = ["stack", "cpu", "opencl"]
 #default = ["stack", "cpu", "blas", "static-api", "opencl", "macro"]
 cpu = []
