--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,7 @@ min-cl = { path="../min-cl", optional=true }
 
 
 [features]
-default = ["stack", "macro", "cpu", "blas", "opencl", "autograd", "wgpu", "static-api"]
+default = ["stack", "macro", "cpu", "blas", "opencl", "autograd", "static-api"]
 #default = ["stack", "cpu", "opencl"]
 #default = ["stack", "cpu", "blas", "static-api", "opencl", "macro"]
 cpu = []
