--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,7 @@ min-cl = { path="../min-cl", optional=true }
 
 
 [features]
-default = ["stack"]
+default = ["cpu", "realloc"]
 #default = ["stack", "macro", "cpu", "autograd", "blas", "opencl",  "static-api"]
 #default = ["stack", "cpu", "blas", "static-api", "opencl", "macro"]
 cpu = []
