--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ rust-version = "1.65"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-
+cuwanto-client = { path = "../cuwanto/cuwanto-client", optional = true }
 #cuwanto-server = {path="../cuwanto/cuwanto-server", optional=true}
 #min-cl = { version = "0.1.3", optional=true }
 min-cl = { path="../min-cl", optional=true }
@@ -36,12 +36,12 @@ min-cl = { path="../min-cl", optional=true }
 
 
 [features]
-default = ["cpu", "realloc"]
-#default = ["stack", "macro", "cpu", "autograd", "blas", "opencl",  "static-api"]
+#default = ["cpu", "realloc", "stack", "blas"]
+default = ["stack", "macro", "cpu", "autograd", "blas", "opencl",  "static-api"]
 #default = ["stack", "cpu", "blas", "static-api", "opencl", "macro"]
 cpu = []
 opencl = ["dep:min-cl", "cpu"]
-#network = ["cuwanto-server"]
+#network = ["cuwanto-client"]
 cuda = []
 realloc = []
 opt-cache = []
