Add addons struct

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,7 +37,7 @@ min-cl = { path="../min-cl", optional=true }
 
 [features]
 #default = ["cpu", "realloc", "stack", "blas"]
-default = ["stack", "macro", "cpu", "autograd", "blas", "opencl", "static-api", "cuda"]
+default = ["stack", "macro", "cpu", "autograd", "blas", "opencl", "static-api", "cuda", "wgpu"]
 #default = ["stack", "cpu", "blas", "static-api", "opencl", "macro"]
 cpu = []
 opencl = ["dep:min-cl", "cpu"]
