--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,8 +36,8 @@ min-cl = { version = "0.2.0", optional=true }
 
 
 [features]
-#default = ["cpu", "stack", "blas"]
-default = ["stack", "macro", "cpu", "blas", "opencl", "static-api", "cuda", "autograd"]
+default = ["cpu", "autograd"]
+#default = ["stack", "macro", "cpu", "blas", "opencl", "static-api", "cuda", "autograd"]
 #default = ["stack", "cpu", "blas", "static-api", "opencl", "macro"]
 cpu = []
 opencl = ["dep:min-cl", "cpu"]
