--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,7 @@ min-cl = { version = "0.2.0", optional=true }
 
 
 [features]
-default = ["cpu", "autograd"]
+default = ["cpu", "autograd", "opencl"]
 #default = ["stack", "macro", "cpu", "blas", "opencl", "static-api", "cuda", "autograd"]
 #default = ["stack", "cpu", "blas", "static-api", "opencl", "macro"]
 cpu = []
