--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,8 +34,9 @@ libm = { version="0.2.6", optional = true }
 min-cl = { version = "0.2.0", optional=true }
 
 [features]
-#default = ["cpu", "autograd", "opencl", "stack", "wgpu", "static-api"]
-default = ["stack", "macro", "cpu", "blas", "opencl", "static-api", "autograd"]
+#default = ["no-std"]
+default = ["cpu", "autograd", "opencl", "stack", "wgpu", "static-api"]
+#default = ["stack", "macro", "cpu", "blas", "opencl", "static-api", "autograd"]
 #default = ["stack", "cpu", "blas", "static-api", "opencl", "macro"]
 cpu = []
 opencl = ["dep:min-cl", "cpu"]
