--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,8 +34,8 @@ libm = { version="0.2.6", optional = true }
 min-cl = { version = "0.2.0", optional=true }
 
 [features]
-#default = ["no-std"]
-default = ["blas", "cpu", "autograd", "stack", "static-api", "opencl", "macro", "cuda", "wgpu"]
+default = ["cpu"]
+#default = ["blas", "cpu", "autograd", "stack", "static-api", "opencl", "macro"]
 #default = ["stack", "macro", "cpu", "blas", "opencl", "static-api", "autograd"]
 #default = ["stack", "cpu", "blas", "static-api", "opencl", "macro"]
 cpu = []
