--- a/Cargo.toml
+++ b/Cargo.toml
@@ -67,6 +67,10 @@ name = "cpu_readme"
 required-features = ["cpu"]
 
 [[example]]
+name = "for_loop"
+required-features = ["cpu"]
+
+[[example]]
 name = "cl_readme"
 required-features = ["opencl"]
 
