--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "custos"
-version = "0.6.3"
+version = "0.7.0"
 edition = "2021"
 license = "MIT"
 description = "A minimal OpenCL, WGPU, CUDA and host CPU array manipulation engine."
 repository = "https://github.com/elftausend/custos"
-keywords = ["CUDA", "OpenCL", "arrays", "deep-learning", "fixed-size"]
+keywords = ["gpu", "automatic-differentiation", "arrays", "deep-learning", "fixed-size"]
 categories = ["science", "mathematics", "no-std", "external-ffi-bindings"]
 readme = "README.md"
 rust-version = "1.65"
@@ -23,8 +23,8 @@ pollster = {version="0.3", optional=true }
 wgpu = {version="0.15", optional=true }
 
 #custos-macro = {path = "../custos-macro", optional=true}
-custos-macro = {git = "https://github.com/elftausend/custos-macro", optional=true}
-#custos-macro = {version = "0.1.0", optional=true}
+#custos-macro = {git = "https://github.com/elftausend/custos-macro", optional=true}
+custos-macro = {version = "0.1.1", optional=true}
 
 # no-std float math
 libm = { version="0.2.6", optional = true }
@@ -35,7 +35,7 @@ min-cl = { version = "0.2.0", optional=true }
 
 [features]
 #default = ["no-std"]
-default = ["blas", "cpu", "stack", "static-api", "opencl", "macro", "opt-cache"]
+default = ["blas", "cpu", "stack", "static-api", "opencl", "macro", "autograd"]
 #default = ["stack", "macro", "cpu", "blas", "opencl", "static-api", "autograd"]
 #default = ["stack", "cpu", "blas", "static-api", "opencl", "macro"]
 cpu = []
@@ -54,9 +54,9 @@ macro = ["dep:custos-macro"]
 
 [dev-dependencies]
 #criterion = "0.3"
-custos-macro = {git = "https://github.com/elftausend/custos-macro"}
+#custos-macro = {git = "https://github.com/elftausend/custos-macro"}
 #custos-macro = {path = "../custos-macro"}
-#custos-macro = {version = "0.1.0"}
+custos-macro = {version = "0.1.1"}
 
 [[example]]
 name = "cuda_readme"
