--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 license = "MIT"
 description = "A minimal OpenCL, WGPU, CUDA and host CPU array manipulation engine."
 repository = "https://github.com/elftausend/custos"
-keywords = ["gpu", "automatic-differentiation", "arrays", "deep-learning", "fixed-size"]
+keywords = ["gpu", "autodiff", "arrays", "deep-learning", "fixed-size"]
 categories = ["science", "mathematics", "no-std", "external-ffi-bindings"]
 readme = "README.md"
 rust-version = "1.65"
