--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,13 +29,15 @@ custos-macro = {version = "0.1.1", optional=true}
 # no-std float math
 libm = { version="0.2.6", optional = true }
 
+nnapi = { path = "../nnapi/nnapi", optional = true }
+
 [build-dependencies]
 #min-cl = { path="../min-cl", optional=true }
 min-cl = { version = "0.2.0", optional=true }
 
 [features]
 #default = ["no-std"]
-default = ["blas", "cpu", "stack", "static-api", "opencl", "macro", "opt-cache"]
+default = ["blas", "cpu", "static-api", "macro", "opt-cache", "nnapi"]
 #default = ["stack", "macro", "cpu", "blas", "opencl", "static-api", "autograd"]
 #default = ["stack", "cpu", "blas", "static-api", "opencl", "macro"]
 cpu = []
@@ -51,6 +53,7 @@ no-std = ["stack", "dep:libm"]
 wgpu = ["dep:wgpu", "dep:pollster", "dep:futures-intrusive"]
 autograd = []
 macro = ["dep:custos-macro"]
+nnapi = ["dep:nnapi"]
 
 [dev-dependencies]
 #criterion = "0.3"
