--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,9 +22,9 @@ futures-intrusive = {version="0.5.0", optional=true}
 pollster = {version="0.3", optional=true }
 wgpu = {version="0.15", optional=true }
 
-#custos-macro = {path = "../custos-macro", optional=true}
+custos-macro = {path = "../custos-macro", optional=true}
 #custos-macro = {git = "https://github.com/elftausend/custos-macro", optional=true}
-custos-macro = {version = "0.1.1", optional=true}
+#custos-macro = {version = "0.1.1", optional=true}
 
 # no-std float math
 libm = { version="0.2.6", optional = true }
@@ -60,8 +60,8 @@ nnapi = ["dep:nnapi", "dep:ndk-sys"]
 [dev-dependencies]
 #criterion = "0.3"
 #custos-macro = {git = "https://github.com/elftausend/custos-macro"}
-#custos-macro = {path = "../custos-macro"}
-custos-macro = {version = "0.1.1"}
+custos-macro = {path = "../custos-macro"}
+#custos-macro = {version = "0.1.1"}
 
 [[example]]
 name = "cuda_readme"
