--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,7 +35,7 @@ min-cl = { version = "0.2.0", optional=true }
 
 [features]
 #default = ["no-std"]
-default = ["blas", "cpu", "stack", "static-api", "opencl", "macro", "opt-cache"]
+default = ["blas", "cpu", "stack", "static-api", "macro", "opt-cache"]
 #default = ["stack", "macro", "cpu", "blas", "opencl", "static-api", "autograd"]
 #default = ["stack", "cpu", "blas", "static-api", "opencl", "macro"]
 cpu = []
