Add cpu feature as requirement for static-api

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,7 +45,7 @@ cuda = []
 realloc = []
 opt-cache = []
 blas = []
-static-api = []
+static-api = ["cpu"]
 stack = []
 no-std = ["stack", "dep:libm"]
 wgpu = ["dep:wgpu", "dep:pollster", "dep:futures-intrusive"]
