--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,7 +35,7 @@ min-cl = { version = "0.2.0", optional=true }
 
 [features]
 #default = ["no-std"]
-default = ["blas", "cpu", "stack", "static-api", "macro", "opt-cache", "opencl",]
+default = ["blas", "cpu", "stack", "static-api", "macro", "opencl", "autograd"]
 #default = ["stack", "macro", "cpu", "blas", "opencl", "static-api", "autograd"]
 #default = ["stack", "cpu", "blas", "static-api", "opencl", "macro"]
 cpu = []
@@ -53,7 +53,6 @@ autograd = []
 macro = ["dep:custos-macro"]
 
 [dev-dependencies]
-#criterion = "0.3"
 #custos-macro = {git = "https://github.com/elftausend/custos-macro"}
 #custos-macro = {path = "../custos-macro"}
 custos-macro = {version = "0.1.1"}
