--- a/custos-bench/Cargo.toml
+++ b/custos-bench/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-custos = { path = "../" }
+custos = { path = "../", features = ["autograd"] }
 criterion = "0.5"
 fastrand = "2.0.0"
 
@@ -19,4 +19,8 @@ harness = false
 
 [[bench]]
 name = "caching_speed"
+harness = false
+
+[[bench]]
+name = "borrowing_owning_cache"
 harness = false
