--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,8 @@ rust-version = "1.69"
 [dependencies]
 #cuwanto-client = { path = "../cuwanto/cuwanto-client", optional = true }
 #cuwanto-server = {path="../cuwanto/cuwanto-server", optional=true}
-min-cl = { version = "0.2.0", optional=true }
-#min-cl = { path="../min-cl", optional=true }
+#min-cl = { version = "0.2.0", optional=true }
+min-cl = { path="../min-cl", optional=true }
 
 # WGPU deps
 futures-intrusive = {version="0.5.0", optional=true}
@@ -30,12 +30,12 @@ custos-macro = {path = "../custos-macro", optional=true}
 libm = { version="0.2.6", optional = true }
 
 [build-dependencies]
-#min-cl = { path="../min-cl", optional=true }
-min-cl = { version = "0.2.0", optional=true }
+min-cl = { path="../min-cl", optional=true }
+#min-cl = { version = "0.2.0", optional=true }
 
 [features]
 #default = ["no-std"]
-default = ["blas", "cpu", "macro", "stack", "cuda", "static-api"]
+default = ["blas", "cpu", "macro", "stack", "cuda"]
 #default = ["stack", "macro", "cpu", "blas", "opencl", "static-api", "autograd"]
 #default = ["stack", "cpu", "blas", "static-api", "opencl", "macro"]
 cpu = []
