--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,22 +35,25 @@ min-cl = { path="../min-cl", optional=true }
 
 [features]
 #default = ["no-std"]
-default = ["blas", "cpu", "macro", "stack", "cuda", "opencl"]
+default = ["blas", "cpu", "macro", "stack", "cuda", "opencl", "autograd"]
 #default = ["stack", "macro", "cpu", "blas", "opencl", "static-api", "autograd"]
 #default = ["stack", "cpu", "blas", "static-api", "opencl", "macro"]
 cpu = []
 opencl = ["dep:min-cl", "cpu"]
 #network = ["cuwanto-client"]
 cuda = []
-realloc = []
 opt-cache = []
 blas = []
 static-api = ["cpu"]
 stack = []
 no-std = ["stack", "dep:libm"]
 wgpu = ["dep:wgpu", "dep:pollster", "dep:futures-intrusive"]
-autograd = []
 macro = ["dep:custos-macro"]
+
+# modules
+autograd = ["cached"]
+lazy = []
+cached = []
 
 [dev-dependencies]
 #custos-macro = {git = "https://github.com/elftausend/custos-macro"}
