--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,8 @@ rust-version = "1.65"
 [dependencies]
 #cuwanto-client = { path = "../cuwanto/cuwanto-client", optional = true }
 #cuwanto-server = {path="../cuwanto/cuwanto-server", optional=true}
-min-cl = { version = "0.2.0", optional=true }
-#min-cl = { path="../min-cl", optional=true }
+#min-cl = { version = "0.2.0", optional=true }
+min-cl = { path="../min-cl", optional=true }
 
 # WGPU deps
 futures-intrusive = {version="0.5.0", optional=true}
@@ -30,8 +30,8 @@ custos-macro = {version = "0.1.1", optional=true}
 libm = { version="0.2.6", optional = true }
 
 [build-dependencies]
-#min-cl = { path="../min-cl", optional=true }
-min-cl = { version = "0.2.0", optional=true }
+min-cl = { path="../min-cl", optional=true }
+#min-cl = { version = "0.2.0", optional=true }
 
 [features]
 #default = ["no-std"]
@@ -57,6 +57,7 @@ macro = ["dep:custos-macro"]
 #custos-macro = {git = "https://github.com/elftausend/custos-macro"}
 #custos-macro = {path = "../custos-macro"}
 custos-macro = {version = "0.1.1"}
+naga = {version="0.13.0", default-features=false, features = ["wgsl-in", "spv-out"]}
 
 [[example]]
 name = "cuda_readme"
