--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,6 +58,7 @@ macro = ["dep:custos-macro"]
 #custos-macro = {path = "../custos-macro"}
 custos-macro = {version = "0.1.1"}
 naga = {version="0.13.0", default-features=false, features = ["wgsl-in", "spv-out"]}
+ash = { version="0.37" }
 
 [[example]]
 name = "cuda_readme"
