--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,13 +29,16 @@ custos-macro = {path = "../custos-macro", optional=true}
 # no-std float math
 libm = { version="0.2.6", optional = true }
 
+ash = { version = "0.37", optional = true } 
+naga = { version = "0.13", features = ["wgsl-in", "spv-out"], optional = true } 
+
 [build-dependencies]
 min-cl = { path="../min-cl", optional=true }
 #min-cl = { version = "0.2.0", optional=true }
 
 [features]
 #default = ["no-std"]
-default = ["blas", "cpu", "macro", "stack", "cuda", "opencl", "autograd"]
+default = ["blas", "cpu", "macro", "stack", "cuda", "opencl", "autograd", "vulkan"]
 #default = ["stack", "macro", "cpu", "blas", "opencl", "static-api", "autograd"]
 #default = ["stack", "cpu", "blas", "static-api", "opencl", "macro"]
 cpu = []
@@ -54,6 +57,8 @@ macro = ["dep:custos-macro"]
 autograd = ["cached"]
 lazy = []
 cached = []
+
+vulkan = ["dep:ash", "dep:naga"]
 
 [dev-dependencies]
 #custos-macro = {git = "https://github.com/elftausend/custos-macro"}
