--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,7 +38,7 @@ min-cl = { path="../min-cl", optional=true }
 
 [features]
 #default = ["no-std"]
-default = ["blas", "cpu", "macro", "stack", "cuda", "opencl", "autograd", "vulkan"]
+default = ["blas", "cpu", "macro", "stack", "cuda", "opencl", "autograd", "vulkan", "wgsl"]
 #default = ["stack", "macro", "cpu", "blas", "opencl", "static-api", "autograd"]
 #default = ["stack", "cpu", "blas", "static-api", "opencl", "macro"]
 cpu = []
@@ -59,6 +59,7 @@ lazy = []
 cached = []
 
 vulkan = ["dep:ash", "dep:naga"]
+wgsl = []
 
 [dev-dependencies]
 #custos-macro = {git = "https://github.com/elftausend/custos-macro"}
