--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,13 +32,15 @@ libm = { version="0.2.6", optional = true }
 ash = { version = "0.37", optional = true } 
 naga = { version = "0.13", features = ["wgsl-in", "spv-out"], optional = true } 
 
+half = {version = "2.3", default-features = false, optional = true} 
+
 [build-dependencies]
 min-cl = { path="../min-cl", optional=true }
 #min-cl = { version = "0.2.0", optional=true }
 
 [features]
 #default = ["no-std"]
-default = ["blas", "cpu", "macro", "stack", "cuda", "opencl", "autograd", "vulkan"]
+default = ["blas", "cpu", "macro", "stack", "cuda", "opencl", "autograd", "vulkan", "half"]
 #default = ["stack", "macro", "cpu", "blas", "opencl", "static-api", "autograd"]
 #default = ["stack", "cpu", "blas", "static-api", "opencl", "macro"]
 cpu = []
@@ -57,6 +59,8 @@ macro = ["dep:custos-macro"]
 autograd = ["cached"]
 lazy = []
 cached = []
+
+half = ["dep:half"]
 
 vulkan = ["dep:ash", "dep:naga"]
 
