--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,11 +40,11 @@ min-cl = { path="../min-cl", optional=true }
 
 [features]
 #default = ["no-std"]
-default = ["blas", "cpu", "macro", "stack", "cuda", "opencl", "autograd", "vulkan", "half", "lazy"]
+default = ["blas", "cpu", "macro", "stack", "cuda", "opencl", "vulkan", "half", "lazy"]
 #default = ["stack", "macro", "cpu", "blas", "opencl", "static-api", "autograd"]
 #default = ["stack", "cpu", "blas", "static-api", "opencl", "macro"]
 cpu = []
-opencl = ["dep:min-cl", "cpu"]
+opencl = ["dep:min-cl", "cpu", "cached"]
 #network = ["cuwanto-client"]
 cuda = []
 opt-cache = []
