--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,7 +43,7 @@ min-cl = { path="../min-cl", optional=true }
 
 [features]
 #default = ["no-std"]
-default = ["blas", "cpu", "macro", "stack", "opencl", "autograd", "vulkan", "cuda", "half", "lazy", "fork"]
+default = ["blas", "cpu", "macro", "stack", "opencl", "autograd", "vulkan", "cuda", "half", "lazy", "fork", "nnapi"]
 #default = ["stack", "macro", "cpu", "blas", "opencl", "static-api", "autograd"]
 #default = ["stack", "cpu", "blas", "static-api", "opencl", "macro"]
 cpu = []
