--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -42,5 +42,6 @@ jobs:
           ndk: 25.2.9519653
           target: google_apis
           arch: x86_64
-          script: ./android-nnapi-ci/gradlew connectedCheck
+          working-directory: ./android-nnapi-ci
+          script: ./gradlew connectedCheck
           
