--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,7 +43,7 @@ ndk-sys = {version = "0.4", features=["test"], optional = true}
 min-cl = { version = "0.3.0", optional=true }
 
 [features]
-default = ["nnapi", "cpu"]
+default = ["nnapi", "cpu", "opencl", "macro", "cached", "autograd"]
 #default = ["blas", "cpu", "macro", "stack", "opencl", "autograd", "vulkan", "half", "lazy", "fork", "nnapi"]
 #default = ["stack", "macro", "cpu", "blas", "opencl", "static-api", "autograd"]
 #default = ["stack", "cpu", "blas", "static-api", "opencl", "macro"]
