--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -24,10 +24,8 @@ jobs:
     - uses: Swatinem/rust-cache@v1
     - name: Build
       run: cargo build --verbose --no-default-features
-    - name: Build (opt-cache)
-      run: cargo build --verbose --no-default-features --features opt-cache,cpu
-    - name: Build (realloc)
-      run: cargo build --verbose --no-default-features --features realloc,cpu
+    - name: Build (cached)
+      run: cargo build --verbose --no-default-features --features cached,cpu
     - name: Build (stack)
       run: cargo build --verbose --no-default-features --features stack,cpu
       
