--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ ash = { version = "0.37", optional = true }
 naga = { version = "0.13", features = ["wgsl-in", "spv-out"], optional = true } 
 
 half = {version = "2.3", default-features = false, optional = true} 
+
 # nnapi
 # nnapi = { path = "../nnapi/nnapi", optional = true}
 nnapi = { version = "0.2", optional = true }
@@ -43,7 +44,8 @@ ndk-sys = {version = "0.4", features=["test"], optional = true}
 min-cl = { version = "0.3.0", optional=true }
 
 [features]
-default = ["nnapi", "cpu", "opencl", "macro", "cached", "autograd"]
+default = ["cpu", "stack"]
+# default = ["nnapi", "cpu", "opencl", "macro", "cached", "autograd"]
 #default = ["blas", "cpu", "macro", "stack", "opencl", "autograd", "vulkan", "half", "lazy", "fork", "nnapi"]
 #default = ["stack", "macro", "cpu", "blas", "opencl", "static-api", "autograd"]
 #default = ["stack", "cpu", "blas", "static-api", "opencl", "macro"]
