--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -46,7 +46,7 @@ jobs:
     - name: Run tests
       run: cargo test --verbose --no-default-features --features cpu
 
-  test-realloc:
+  test-cached:
   
     runs-on: ubuntu-latest
     
@@ -60,25 +60,25 @@ jobs:
 
     - uses: Swatinem/rust-cache@v1
 
-    - name: Run 'realloc' tests
-      run: cargo test --verbose --no-default-features --features realloc,cpu
+    - name: Run 'cached' tests
+      run: cargo test --verbose --no-default-features --features cached,cpu
 
-  test-opt-cache:
+  # test-opt-cache:
   
-    runs-on: ubuntu-latest
+  #   runs-on: ubuntu-latest
     
-    steps:
-    - uses: actions/checkout@v3
+  #   steps:
+  #   - uses: actions/checkout@v3
 
-    - uses: actions-rs/toolchain@v1
-      with:
-        profile: minimal
-        toolchain: stable
+  #   - uses: actions-rs/toolchain@v1
+  #     with:
+  #       profile: minimal
+  #       toolchain: stable
 
-    - uses: Swatinem/rust-cache@v1
+  #   - uses: Swatinem/rust-cache@v1
 
-    - name: Run 'opt-cache' tests
-      run: cargo test --verbose --no-default-features --features opt-cache,cpu
+  #   - name: Run 'opt-cache' tests
+  #     run: cargo test --verbose --no-default-features --features opt-cache,cpu
 
   test-stack:
   
