--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,9 +18,9 @@ min-cl = { version = "0.3.0", optional=true }
 # min-cl = { path="../min-cl", optional=true }
 
 # WGPU deps
-futures-intrusive = {version="0.5.0", optional=true}
-pollster = {version="0.3", optional=true }
-wgpu = {version="0.15", optional=true }
+# futures-intrusive = {version="0.5.0", optional=true}
+# pollster = {version="0.3", optional=true }
+# wgpu = {version="0.15", optional=true }
 
 # custos-macro = {path = "../custos-macro", optional=true}
 custos-macro = {git = "https://github.com/elftausend/custos-macro", optional=true}
@@ -58,7 +58,7 @@ blas = []
 static-api = ["cpu"]
 stack = []
 no-std = ["stack", "dep:libm"]
-wgpu = ["dep:wgpu", "dep:pollster", "dep:futures-intrusive"]
+# wgpu = ["dep:wgpu", "dep:pollster", "dep:futures-intrusive"]
 macro = ["dep:custos-macro"]
 nnapi = ["dep:nnapi", "dep:ndk-sys", "lazy"]
 
