Fix number return in retriever fn

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -46,6 +46,25 @@ jobs:
     - name: Run tests
       run: cargo test --verbose --no-default-features --features cpu
 
+  test-modules:
+    runs-on: ubuntu-latest
+    
+    steps:
+    - uses: actions/checkout@v3
+
+    - uses: actions-rs/toolchain@v1
+      with:
+        profile: minimal
+        toolchain: stable
+
+    - uses: Swatinem/rust-cache@v1
+
+    - name: Run tests
+      run: cargo test --verbose --no-default-features --features cpu,fork
+      run: cargo test --verbose --no-default-features --features cpu,autograd
+      run: cargo test --verbose --no-default-features --features cpu,lazy
+      run: cargo test --verbose --no-default-features --features cpu,cached,fork
+
   test-cached:
   
     runs-on: ubuntu-latest
