--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,11 +44,8 @@ ndk-sys = {version = "0.4", features=["test"], optional = true}
 min-cl = { version = "0.3.0", optional=true }
 
 [features]
-default = ["stack", "autograd", "cpu", "opencl", "fork", "vulkan", "lazy", "cuda", "autograd"]
-# default = ["nnapi", "cpu", "opencl", "macro", "cached", "autograd"]
-#default = ["blas", "cpu", "macro", "stack", "opencl", "autograd", "vulkan", "half", "lazy", "fork", "nnapi"]
-#default = ["stack", "macro", "cpu", "blas", "opencl", "static-api", "autograd"]
-#default = ["stack", "cpu", "blas", "static-api", "opencl", "macro"]
+default = ["cpu", "lazy"]
+# default = ["stack", "autograd", "cpu", "opencl", "fork", "vulkan", "lazy", "cuda", "autograd"]
 cpu = []
 opencl = ["dep:min-cl", "cpu", "cached"]
 #network = ["cuwanto-client"]
