--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,7 +45,7 @@ min-cl = { version = "0.3.0", optional=true }
 
 [features]
 # default = ["cpu", "lazy"]
-default = ["stack", "autograd", "cpu", "opencl", "fork", "vulkan", "lazy", "autograd"]
+default = ["stack", "autograd", "cpu", "opencl", "fork", "lazy", "autograd",]
 cpu = []
 opencl = ["dep:min-cl", "cpu", "cached"]
 #network = ["cuwanto-client"]
