--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,7 +45,7 @@ min-cl = { version = "0.3.0", optional=true }
 
 [features]
 # default = ["cpu", "autograd", "macro"]
-default = ["stack", "autograd", "cpu", "opencl", "fork", "lazy", "autograd",]
+default = ["stack", "autograd", "cpu", "opencl", "fork", "lazy", "autograd", "cuda", "vulkan"]
 cpu = []
 opencl = ["dep:min-cl", "cpu", "cached"]
 #network = ["cuwanto-client"]
