--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,7 +39,7 @@ min-cl = { path="../min-cl", optional=true }
 
 [features]
 #default = ["no-std"]
-default = ["blas", "cpu", "static-api", "macro", "autograd", "opencl", "nnapi"]
+default = ["blas", "cpu", "static-api", "macro", "autograd", "opencl"]
 #default = ["stack", "macro", "cpu", "blas", "opencl", "static-api", "autograd"]
 #default = ["stack", "cpu", "blas", "static-api", "opencl", "macro"]
 cpu = []
