--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,7 +46,7 @@ serde = { version = "1.0", features = ["derive"], optional = true }
 min-cl = { version = "0.3.0", optional=true }
 
 [features]
-default = ["cpu", "autograd", "macro", "serde"]
+default = ["cpu", "autograd", "macro", "serde", "cuda"]
 # default = ["stack", "autograd", "cpu", "opencl", "fork", "lazy", "autograd",]
 cpu = []
 opencl = ["dep:min-cl", "cpu", "cached"]
