--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,9 @@ rust-version = "1.69"
 [dependencies]
 #cuwanto-client = { path = "../cuwanto/cuwanto-client", optional = true }
 #cuwanto-server = {path="../cuwanto/cuwanto-server", optional=true}
-min-cl = { version = "0.3.0", optional=true }
-# min-cl = { path="../min-cl", optional=true }
+# min-cl = { git = "https://github.com/elftausend/min-cl", optional=true}
+# min-cl = { version = "0.3.0", optional=true }
+min-cl = { path="../min-cl", optional=true }
 
 # WGPU deps
 # futures-intrusive = {version="0.5.0", optional=true}
@@ -42,8 +43,9 @@ ndk-sys = {version = "0.4", features=["test"], optional = true}
 serde = { version = "1.0", features = ["derive"], optional = true }
 
 [build-dependencies]
-# min-cl = { path="../min-cl", optional=true }
-min-cl = { version = "0.3.0", optional=true }
+min-cl = { path="../min-cl", optional=true }
+# min-cl = { git = "https://github.com/elftausend/min-cl", optional = true }
+# min-cl = { version = "0.3.0", optional=true }
 
 [features]
 # default = ["cpu", "autograd", "macro"]
