--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,7 +49,7 @@ min-cl = { path="../min-cl", optional=true }
 
 [features]
 # default = ["cpu", "autograd", "macro"]
-default = ["graph", "stack", "autograd", "cpu", "fork", "lazy", "opencl"]
+default = ["graph", "stack", "autograd", "cpu", "fork", "lazy", "opencl", "cuda", "vulkan"]
 
 cpu = []
 opencl = ["dep:min-cl", "cpu", "cached"]
