--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,7 +49,7 @@ min-cl = { path="../min-cl", optional=true }
 
 [features]
 # default = ["cpu", "autograd", "macro"]
-default = ["graph", "stack", "autograd", "cpu", "fork", "lazy", "opencl", "cuda", "vulkan"]
+default = ["graph", "stack", "autograd", "cpu", "fork", "opencl", "vulkan"]
 
 cpu = []
 opencl = ["dep:min-cl", "cpu", "cached"]
@@ -64,7 +64,7 @@ macro = ["dep:custos-macro"]
 nnapi = ["dep:nnapi", "dep:ndk-sys", "lazy"]
 
 # modules
-autograd = ["cached"]
+autograd = ["cached", "lazy"]
 lazy = []
 cached = []
 fork = []
