--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,7 +49,7 @@ min-cl = { git = "https://github.com/elftausend/min-cl", optional = true }
 
 [features]
 # default = ["cpu", "autograd", "macro"]
-default = ["cpu", "cuda", "lazy", "vulkan", "static-api",]
+default = ["cpu", "cuda", "lazy", "vulkan", "static-api", "opencl", "untyped", "stack"]
 
 cpu = []
 opencl = ["dep:min-cl", "cpu", "cached"]
@@ -62,6 +62,7 @@ no-std = ["stack", "dep:libm"]
 # wgpu = ["dep:wgpu", "dep:pollster", "dep:futures-intrusive"]
 macro = ["dep:custos-macro"]
 nnapi = ["dep:nnapi", "dep:ndk-sys", "lazy"]
+untyped = []
 
 # modules
 autograd = ["cached", "lazy"]
