--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,19 @@ naga = { version = "0.14", features = ["wgsl-in", "spv-out"], optional = true }
 
 half = {version = "2.3", default-features = false, optional = true} 
 
+# web
+js-sys = { version = "0.3", optional = true }
+web-sys = { version = "0.3", optional = true, features = [
+    'Document',
+    'Element',
+    'HtmlCanvasElement',
+    'WebGlBuffer',
+    'WebGlVertexArrayObject',
+    'WebGl2RenderingContext',
+    'WebGlProgram',
+    'WebGlShader',
+    'Window'] }
+
 # nnapi
 # nnapi = { path = "../nnapi/nnapi", optional = true}
 nnapi = { version = "0.2", optional = true }
@@ -50,7 +63,7 @@ min-cl = { git = "https://github.com/elftausend/min-cl", optional = true }
 
 [features]
 # default = ["cpu", "autograd", "macro"]
-default = ["cpu", "lazy", "static-api", "opencl", "graph", "autograd", "fork", "serde", "json"]
+default = ["cpu", "lazy", "static-api", "webgl"]
 
 cpu = []
 opencl = ["dep:min-cl", "cpu", "cached"]
@@ -73,8 +86,9 @@ graph = []
 
 half = ["dep:half"]
 
-vulkan = ["dep:ash", "dep:naga", "wgsl"]
-wgsl = []
+vulkan = ["dep:ash", "wgsl"]
+webgl = ["wgsl", "js-sys"]
+wgsl = ["dep:naga"]
 
 serde = ["dep:serde"]
 json = ["dep:serde_json"]
