Add spv and glsl features, move translate error to error.rs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,7 @@ custos-macro = {git = "https://github.com/elftausend/custos-macro", optional=tru
 libm = { version="0.2.6", optional = true }
 
 ash = { version = "0.37", optional = true } 
-naga = { version = "0.14", features = ["wgsl-in", "spv-out"], optional = true } 
+naga = { version = "0.14", features = ["wgsl-in"], optional = true } 
 
 half = {version = "2.3", default-features = false, optional = true} 
 
@@ -86,8 +86,11 @@ graph = []
 
 half = ["dep:half"]
 
-vulkan = ["dep:ash", "wgsl"]
-webgl = ["wgsl", "dep:js-sys", "dep:web-sys"]
+vulkan = ["dep:ash", "wgsl", "spv"]
+webgl = ["wgsl", "dep:js-sys", "dep:web-sys", "glsl"]
+
+spv = ["naga/spv-out"]
+glsl = ["naga/glsl-out"]
 wgsl = ["dep:naga"]
 
 serde = ["dep:serde"]
