Update GPU runner config, fix opencl without unified mem test

--- a/.github/workflows/gpu.yml
+++ b/.github/workflows/gpu.yml
@@ -66,10 +66,10 @@ jobs:
 
     - name: Run tests (OpenCL)
       run: cargo test --verbose --no-default-features --features opencl
-    - name: Run tests (OpenCL, realloc)
-      run: cargo test --verbose --no-default-features --features opencl,realloc
-    - name: Run tests (OpenCL, opt-cache)
-      run: cargo test --verbose --no-default-features --features opencl,opt-cache
+    - name: Run tests (OpenCL, lazy)
+      run: cargo test --verbose --no-default-features --features opencl,lazy
+    - name: Run tests (OpenCL, autograd)
+      run: cargo test --verbose --no-default-features --features opencl,autograd
   
   test-cuda:
   
@@ -85,10 +85,10 @@ jobs:
 
     - name: Run tests (CUDA)
       run: cargo test --verbose --no-default-features --features cuda
-    - name: Run tests (CUDA, realloc)
-      run: cargo test --verbose --no-default-features --features cuda,realloc
-    - name: Run tests (CUDA, opt-cache)
-      run: cargo test --verbose --no-default-features --features cuda,opt-cache
+    - name: Run tests (CUDA, lazy)
+      run: cargo test --verbose --no-default-features --features cuda,lazy
+    - name: Run tests (CUDA, autograd)
+      run: cargo test --verbose --no-default-features --features cuda,autograd
 
   test-all:
   
@@ -104,7 +104,7 @@ jobs:
 
     - name: Run tests (CUDA, OpenCL)
       run: cargo test --verbose --no-default-features --features cuda,opencl
-    - name: Run tests (CUDA, OpenCL, opt-cache)
-      run: cargo test --verbose --no-default-features --features cuda,opencl,opt-cache
-    - name: Run tests (CUDA, OpenCL, realloc)
-      run: cargo test --verbose --no-default-features --features cuda,opencl,realloc
+    - name: Run tests (CUDA, OpenCL, lazy)
+      run: cargo test --verbose --no-default-features --features cuda,opencl,lazy
+    - name: Run tests (CUDA, OpenCL, autograd)
+      run: cargo test --verbose --no-default-features --features cuda,opencl,autograd
